<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.northernchile</groupId>
	<artifactId>backend-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>backend-api</name>
	<description>Northern Chile Booking and admin</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
      	<properties>
      		<java.version>21</java.version>
      	</properties>
      	<dependencies>
      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-data-jpa</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-oauth2-client</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-security</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-validation</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-web</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.flywaydb</groupId>
      			<artifactId>flyway-core</artifactId>
      		</dependency>
      		<dependency>
      			<groupId>org.flywaydb</groupId>
      			<artifactId>flyway-database-postgresql</artifactId>
      		</dependency>
      
      		<dependency>
      			<groupId>org.postgresql</groupId>
      			<artifactId>postgresql</artifactId>
      			<scope>runtime</scope>
      		</dependency>

      		<dependency>
      			<groupId>org.springframework.boot</groupId>
      			<artifactId>spring-boot-starter-test</artifactId>
      			<scope>test</scope>
      		</dependency>
      		<dependency>
      			<groupId>org.springframework.security</groupId>
      			<artifactId>spring-security-test</artifactId>
      			<scope>test</scope>
      		</dependency>
            <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-devtools</artifactId>
          <scope>runtime</scope>
          <optional>true</optional>
      </dependency>
            		<dependency>
            			<groupId>io.jsonwebtoken</groupId>
            			<artifactId>jjwt</artifactId>
            			<version>0.9.1</version>
            		</dependency>

			<dependency>
			    <groupId>javax.xml.bind</groupId>
			    <artifactId>jaxb-api</artifactId>
			    <version>2.3.1</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish.jaxb</groupId>
				<artifactId>jaxb-runtime</artifactId>
			</dependency>

      			<dependency>
      				<groupId>com.cronutils</groupId>
      				<artifactId>cron-utils</artifactId>
      				<version>9.2.0</version>
      			</dependency>
      			<dependency>
      				<groupId>org.shredzone.commons</groupId>
      				<artifactId>commons-suncalc</artifactId>
      				<version>3.11</version>
      			</dependency>
      			<dependency>
      				<groupId>org.springdoc</groupId>
      				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      				<version>2.5.0</version>
      			</dependency>
      		<dependency>
      			<groupId>com.vladmihalcea</groupId>
      			<artifactId>hibernate-types-60</artifactId>
      			<version>2.21.1</version>
      		</dependency>
      	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
							</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
